--- a/src/components/header/HeaderStyles.css
+++ b/src/components/header/HeaderStyles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
 nav {
     display: flex;
     align-items: center;
@@ -5,31 +7,32 @@ nav {
     background: #E7CBCB;
     padding: 10px 80px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
-    font-family: 'Arial', 'Helvetica', sans-serif;
-  }
-  
-  .navbar {
+    font-family: 'Poppins', sans-serif; /* Poppins fontunu kullan */
+}
+
+.navbar {
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  
-  .navbar li {
+}
+
+.navbar li {
     list-style: none;
     padding: 0 20px;
     position: relative;
-  }
-  
-  .navbar li a {
+}
+
+.navbar li a {
     text-decoration: none;
     font-size: 1.3rem;
     font-weight: 600;
-    color: #99627A;
+    color: #55253a;
     position: relative;
     transition: color 0.3s ease-in-out;
-  }
-  
-  .navbar li a::after {
+    font-family: 'Poppins', sans-serif; /* Poppins fontunu kullan */
+}
+
+.navbar li a::after {
     content: "";
     width: 0;
     height: 2px;
@@ -38,23 +41,51 @@ nav {
     bottom: -4px;
     left: 0px;
     transition: width 0.3s ease-in-out;
-  }
-  
-  .navbar li a:hover::after,
-  .navbar li a.active-link::after {
+}
+
+.navbar li a:hover::after,
+.navbar li a.active-link::after {
     width: 100%;
-  }
-  
-  .navbar li a:hover,
-  .navbar li a.active-link {
+}
+
+.navbar li a:hover,
+.navbar li a.active-link {
     color: #643843;
-  }
-  .info-bar {
+}
+
+.info-bar {
     display: flex;
     align-items: center;
     background-color: #643843;
     padding: 5px 15px;
     color: white;
     justify-content: flex-end;
+    font-family: 'Poppins', sans-serif; /* Poppins fontunu kullan */
+}
+.dropdown {
+    position: relative;
   }
   
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #E7CBCB;
+    min-width: 230px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: #fff;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #fff;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
