--- a/src/views/public/Home/Pages/Home/HomeStyle.css
+++ b/src/views/public/Home/Pages/Home/HomeStyle.css
@@ -1,56 +1,60 @@
 .home-container {
-    height: 100%;
-    width: 100%;
-  }
-    
-  .featured-activity {
-    box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.5);
-    margin-top: 1%;
-    position: relative;
-    display: inline-block;
-    margin-left: 5%;
+  height: 100%;
+  width: 100%;
+}
 
-  }
-  
-  .icon {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    color: rgba(100, 56, 67, 0.99);
-    cursor: pointer; 
-  }
-  
-  .arrow-left {
-    left: 10px;
-    
-  }
-  
-  .arrow-right {
-    right: 10px;
-  }
-  
-  .activity-info {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: rgba(231, 203, 203, 0.7); /* Açıklama arka plan rengi */
-    padding: 10px;
-  }
-  
-  .activity-info h3, .activity-info p {
-    color: #643843;
-  }
+.featured-activity {
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.5);
+  margin-top: 1%;
+  position: relative;
+  display: inline-block;
+  margin-left: 5%;
+  width: 40%; /* Resim ve açıklama kutusu genişliği */
+}
 
-  .cinema-home-container{
-    margin-left: 5%;
+.featured-activity img {
+  width: 100%; /* Resmi konteynıra sığdır */
+  height: auto; /* Oranları koru */
+}
 
-  }
-  .cinema-fast-container{
-    display: flex;
-    width: 60%;
-    gap: 10px;
-  }
+.icon {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  color: rgba(100, 56, 67, 0.99);
+  cursor: pointer;
+}
 
-  
-  
+.arrow-left {
+  left: 10px;
+}
+
+.arrow-right {
+  right: 10px;
+}
+
+.activity-info {
+  position: relative;
+  bottom: 0;
+  left: 0;
+  width: 100%; /* Konteynırın tamamını kapla */
+  background-color: rgba(231, 203, 203, 0.7);
+  padding: 10px;
+  box-sizing: border-box; /* Padding genişlik ve yükseklik hesaplamasına dahil olsun */
+  overflow: hidden; /* Aşırı uzun metinleri kes */
+}
+
+.activity-info h3,
+.activity-info p {
+  color: #643843;
+  margin: 0; /* Varsayılan dış boşlukları kaldır */
+}
+
+.cinema-home-container {
+  margin-left: 5%;
+}
+.cinema-fast-container {
+  display: flex;
+  width: 60%;
+  gap: 10px;
+}
